total refractoring