@@ -9,7 +9,11 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
 
 import java.util.Arrays;
+import java.util.List;
 
+/**
+ * Enable caching
+ */
 @Configuration
 @EnableCaching
 public class CustomCacheConfig {
@@ -18,8 +22,7 @@ public class CustomCacheConfig {
     @Bean
     public CacheManager cacheManager() {
         SimpleCacheManager cacheManager = new SimpleCacheManager();
-        cacheManager.setCaches(Arrays.asList(
-                new ConcurrentMapCache("roomType"),
+        cacheManager.setCaches(List.of(
                 new ConcurrentMapCache("photos")));
         return cacheManager;
     }
